[gd_scene load_steps=9 format=2]

[ext_resource path="res://IconUsername.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/Crown.png" type="Texture" id=2]
[ext_resource path="res://Money.tscn" type="PackedScene" id=10]
[ext_resource path="res://HandsInfo.tscn" type="PackedScene" id=11]
[ext_resource path="res://images/OpponentInfo.png" type="Texture" id=12]
[ext_resource path="res://Employee.tscn" type="PackedScene" id=13]
[ext_resource path="res://Built.tscn" type="PackedScene" id=14]
[ext_resource path="res://OpponentInfo.gd" type="Script" id=15]

[node name="OpponentInfo" type="Node2D"]
script = ExtResource( 15 )

[node name="InfoBackground" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 12 )

[node name="MoneyIcon" parent="." instance=ExtResource( 10 )]

[node name="Built" parent="." instance=ExtResource( 14 )]

[node name="HandsInfo" parent="." instance=ExtResource( 11 )]

[node name="Employee" parent="." instance=ExtResource( 13 )]
position = Vector2( -60, 37 )
scale = Vector2( 0.07, 0.07 )

[node name="IconUsername" parent="." instance=ExtResource( 1 )]

[node name="Crown" type="Sprite" parent="."]
visible = false
position = Vector2( -23, 36 )
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 2 )
